fix direction of output