@@ -2,6 +2,7 @@ package dev.stemcraft.commands;
 
 import dev.stemcraft.STEMCraft;
 import dev.stemcraft.api.STEMCraftAPI;
+import dev.stemcraft.api.commands.STEMCraftCommand;
 import dev.stemcraft.api.commands.STEMCraftCommandContext;
 import dev.stemcraft.api.utils.SCPlayer;
 import org.bukkit.Bukkit;
@@ -19,7 +20,8 @@ public class HubCommand extends STEMCraftCommandImpl {
         register(plugin);
     }
 
-    public void onExecute(STEMCraftAPI api, String label, STEMCraftCommandContext ctx) {
+    @Override
+    public void onExecute(STEMCraftAPI api, STEMCraftCommand cmd, STEMCraftCommandContext ctx) {
         // check if console called without args
         if(ctx.isConsole() && ctx.args().isEmpty()) {
             error("CONSOLE_PLAYER_REQUIRED");
@@ -28,14 +30,14 @@ public class HubCommand extends STEMCraftCommandImpl {
 
         // check permission for others (if args given)
         if(!ctx.args().isEmpty() && !ctx.hasPermission("stemcraft.hub.others")) {
-            error("HUB_TELEPORT_OTHER_DENY");
+            error(ctx.getSender(), "HUB_TELEPORT_OTHER_DENY");
             return;
         }
 
         // get target player
         Player target = ctx.getArgAsPlayer(1, ctx.getSender());
         if(target == null) {
-            error("PLAYER_NOT_FOUND", "player", ctx.getArg(1));
+            error(ctx.getSender(), "PLAYER_NOT_FOUND", "player", ctx.getArg(1));
             return;
         }
 
@@ -45,11 +47,11 @@ public class HubCommand extends STEMCraftCommandImpl {
         if (hubWorldName != null && !hubWorldName.isEmpty()) {
             hubWorld = Bukkit.getWorld(hubWorldName);
         } else {
-            hubWorld = Bukkit.getWorlds().get(0);
+            hubWorld = Bukkit.getWorlds().getFirst();
         }
 
         if (hubWorld == null) {
-            error("HUB_WORLD_NOT_FOUND", "world", hubWorldName);
+            error(ctx.getSender(), "HUB_WORLD_NOT_FOUND", "world", hubWorldName);
             return;
         }
 
@@ -57,12 +59,11 @@ public class HubCommand extends STEMCraftCommandImpl {
         SCPlayer.teleport(target, hubLocation);
 
         if (target.equals(ctx.getSender())) {
-            success("HUB_TELEPORT_SUCCESS");
+            success(ctx.getSender(), "HUB_TELEPORT_SUCCESS");
         } else {
             String senderName = ctx.isConsole() ? api.locale().get("CONSOLE_NAME") : ctx.getSender().getName();
-            success("HUB_TELEPORT_OTHER_SUCCESS_SENDER", "player", target.getName());
+            success(ctx.getSender(), "HUB_TELEPORT_OTHER_SUCCESS_SENDER", "player", target.getName());
             success(target, "HUB_TELEPORT_OTHER_SUCCESS_PLAYER", "player", senderName);
         }
     }
-
 }
